<resources>
    <string name="app_name">Detecta Quinua</string>

    <!-- Main Activity -->
    <string name="main_lbl_descripcion">Diagnóstico rápido y preciso para tus hojas de quinua.</string>
    <string name="main_btn_abrirCamara">Abrir Camara</string>
    <string name="main_btn_abrirGaleria">Abrir Galeria</string>
    <string name="main_btn_analizarImagen">Analizar Imagen</string>
    <string name="main_btn_verHistorial">Ver Historial</string>
    <string name="main_lbl_tituloInstruccion">¡Consejos para una Foto Perfecta!</string>
    <string name="main_lbl_contInstruccion">Sigue estos sencillos pasos para obtener los mejores resultados en la detección:\n\n• **Prepara la base:** Coloca una hoja de papel blanco sobre una superficie plana.\n\n• **Posiciona la hoja:** Pon la hoja de la quinua cuidadosamente encima del papel blanco.\n\n• **¡Enfoca y centra!** Toma la foto de la hoja de la quinua lo más centrada posible.\n\n• **Iluminación clave:** Asegúrate de que la hoja esté bien iluminada para una imagen clara.</string>

    <!-- Preview Img Activity -->
    <string name="previewImg_title">Vista Previa</string>
    <string name="previewImg_lbl_descripcion">Previsualizar imagen</string>
    <string name="previewImg_btn_analizarImagen">Analizar Imagen</string>

    <!-- Ucrop Activity //recortar imagen -->
    <string name="ucrop_label_edit_photo">Recortar Imagen</string>

    <!-- Resultado Activity -->
    <string name="result_title">Resultado del Análisis</string>
    <string name="result_lbl_prediccion">Predicción: </string>
    <string name="result_lbl_precision">Precisión: </string>
    <string name="result_lbl_interpretacion_0">Muy alta Precisión</string>
    <string name="result_lbl_interpretacion_1">Alta precisión</string>
    <string name="result_lbl_interpretacion_2">Precisión moderada</string>
    <string name="result_lbl_interpretacion_3">Baja precisión</string>

    <!-- Historial Activity -->
    <string name="historial_title">Historial</string>

    <!-- Detalle Historial Activity -->
    <string name="detHistorial_img">Analizar Imagen</string>
    <string name="detHistorial_title">Detalle de Consulta</string>
    <string name="detHistorial_lbl_fecha">Fecha y hora: </string>
    <string name="detHistorial_lbl_prediccion">Predicción: </string>
    <string name="detHistorial_lbl_precision">Precisión: </string>
    <string name="detHistorial_btn_eliminar">Eliminar Registro</string>

    <!-- Item Historial Activity -->
    <string name="itemHistorial_btn_eliminar">Eliminar</string>

    <!-- Base Activity -->
    <string name="base_lbl_autor">Desarrollado por Elias</string>

    <!-- Menu Toolbar -->
    <string name="menu_historial">Historial</string>
</resources>